# MathParser

./: .gitignore  README.md
Expressions/: .clang-format  CMakeLists.txt  main.cpp
Expressions/src/: BinaryExpression.h  CMakeLists.txt  Div.h  Expression.cpp  Expression.h  Expressions.h  Mul.h  Negate.h  Number.h  Parser.cpp  Parser.h  ParserInternal.cpp  ParserInternal.h  SinCos.h  Stack.h  Sub.h  Subtraction.h  Sum.h  Variable.h
Expressions/tests/: CMakeLists.txt  ExpressionTests.cpp  LexerTests.cpp  ReverseNotationTests.cpp  basic_tests.cpp
